--- a/index.html
+++ b/index.html
@@ -31,6 +31,58 @@
   </div>
 </div>
 
+<img class="ui centered image" src="//cdn.shopify.com/s/files/1/1035/5187/files/logoshort_800x.png?v=1543956749" alt="Island Snow Hawaii" itemprop="logo">
+
+<div class="ui borderless centermenu menu">
+  <div class="ui centered grid container">
+      <div class="ui dropdown item">
+        <div class="text">MENS</div>
+        <i class="dropdown icon"></i>
+        <div class="menu">
+          <div class="item">TANK TOPS</div>
+          <div class="item">SHIRTS</div>
+        </div>
+      </div>
+
+      <div class="ui dropdown item">
+        <div class="text">WOMENS</div>
+        <i class="dropdown icon"></i>
+        <div class="menu">
+          <div class="item">TANK TOPS</div>
+          <div class="item">SHIRTS</div>        </div>
+      </div>
+
+      <div class="ui dropdown item">
+      <div class="text">KIDS</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">TANK TOPS</div>
+        <div class="item">SHIRTS</div>      </div>
+      </div>
+
+      <div class="ui scrolling dropdown item">
+      <div class="text active">BRANDS</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">ALOHA SURF PROJECT</div>
+        <div class="item">AMUSE SOCIETY</div>
+        <div class="item">AMUSE SOCIETY</div>
+        <div class="item">FARMERS MARKET HAWAII</div>
+        <div class="item">HAWAII DOMESTIC MARKET</div>
+        <div class="item">HERSCHEL SUPPLT CO.</div>
+        <div class="item">HILIFE</div>
+        <div class="item">ICONS OF ALOHA</div>
+        <div class="item">ISLAND SNOW HAWAII</div>
+      </div>
+      </div>
+
+      <a class="item">SALE</a>
+
+  </div>
+  </div>
+
+<img class="ui fluid image" src="http://courses.ics.hawaii.edu/ics314s20/morea/ui-frameworks/experience-islandsnow-video-snapshot.png" alt="Island Snow Hawaii" itemprop="background">
+
 <script>
   $('.ui.dropdown')
       .dropdown()
