--- a/index.html
+++ b/index.html
@@ -31,33 +31,42 @@
   </div>
 </div>
 
-<img class="ui centered image" src="//cdn.shopify.com/s/files/1/1035/5187/files/logoshort_800x.png?v=1543956749" alt="Island Snow Hawaii" itemprop="logo">
+<img class="ui centered image" src="http://courses.ics.hawaii.edu/ics314s20/morea/ui-frameworks/experience-islandsnow-logo.png" alt="Island Snow Hawaii" itemprop="logo">
 
 <div class="ui borderless centermenu menu">
   <div class="ui centered grid container">
-      <div class="ui dropdown item">
+      <div class="ui scrolling dropdown item">
         <div class="text">MENS</div>
         <i class="dropdown icon"></i>
         <div class="menu">
           <div class="item">TANK TOPS</div>
-          <div class="item">SHIRTS</div>
+          <div class="item">LONG SLEEVE SHIRTS</div>
+          <div class="item">ALOHA SHIRTS</div>
+          <div class="item">HATS SHIRTS</div>
+          <div class="item">BAGS & WALLETS</div>
         </div>
       </div>
 
-      <div class="ui dropdown item">
+      <div class="ui scrolling dropdown item">
         <div class="text">WOMENS</div>
         <i class="dropdown icon"></i>
         <div class="menu">
           <div class="item">TANK TOPS</div>
-          <div class="item">SHIRTS</div>        </div>
+          <div class="item">LONG SLEEVE SHIRTS</div>
+          <div class="item">HATS</div>
+          <div class="item">BAGS & WALLETS</div>
+        </div>
       </div>
 
-      <div class="ui dropdown item">
+      <div class="ui scrolling dropdown item">
       <div class="text">KIDS</div>
       <i class="dropdown icon"></i>
       <div class="menu">
-        <div class="item">TANK TOPS</div>
-        <div class="item">SHIRTS</div>      </div>
+        <div class="item">SHIRTS</div>
+        <div class="item">ONSIES</div>
+        <div class="item">SWEATSHIRTS</div>
+        <div class="item">ACCESSORIES</div>
+      </div>
       </div>
 
       <div class="ui scrolling dropdown item">
