--- a/index.html
+++ b/index.html
@@ -92,9 +92,44 @@
 
 <img class="ui fluid image" src="http://courses.ics.hawaii.edu/ics314s20/morea/ui-frameworks/experience-islandsnow-video-snapshot.png" alt="Island Snow Hawaii" itemprop="background">
 
-<div class="ui three column grid container">
+<div class="footer-background">
+  <div class="ui three column grid container">
+    <div class="column">
+      <div class="ui list">
+        <div class="item"> About Us</div>
+        <div class="item">Store Locations</div>
+        <div class="item">Employment</div>
+        <div class="item">Videos</div>
+        <div class="item">Shipping & Returns</div>
+        <div class="item">Terms & Conditions</div>
+        <div class="item">Privacy Policy</div>
+      </div>
+    </div>
+    <div class="column">
+      <div class="ui list">
+        <div class="item">Men</div>
+        <div class="item">Women</div>
+        <div class="item">Kids</div>
+        <div class="item">Brands</div>
+        <div class="item">Sale</div>
+      </div>
+    </div>
+    <div class="column">
+      <div class="ui list">
+        <div class="item">Sign up for our latest updates!</div>
+        <div class="item">Join our mailing list fo rupdates</div>
+      </div>
+      <div class="ui labeled email input">
+        <label>
+          <input type="text" placeholder="Enter Email Address">
+        </label>
+        <div class="ui black label">
+          Join
+        </div>
+      </div>
+    </div>
+  </div>
 
-  
 
 
 </div>
